Document Java 17 features in README
Added a section on Java 17 features including sealed classes, pattern matching, records, text blocks, and garbage collector enhancements.